--- a/capas/src/main/resources/templates/index.html
+++ b/capas/src/main/resources/templates/index.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="ISO-8859-1">
-<title>Insert title here</title>
+<title>Ingreso estudiantes</title>
 </head>
 <body>
 	
@@ -27,6 +27,8 @@
 		<input type="submit" value="Guardar">
 		
 	</form>
+	
+
 	
 	<button type="button" th:onclick="|window.location.href='/listado'|">Ver Listado</button>
 	
