--- a/capas/src/main/resources/templates/listado.html
+++ b/capas/src/main/resources/templates/listado.html
@@ -1,27 +1,111 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
+	<title>Contact V1</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+<!--===============================================================================================-->
+	<link rel="icon" type="image/png" href="images/icons/favicon.ico"/>
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.7.0/css/font-awesome.min.css">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="vendor/animate/animate.css">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="vendor/css-hamburgers/hamburgers.min.css">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="vendor/select2/select2.min.css">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="css/util.css">
+	<link rel="stylesheet" type="text/css" href="css/main.css">
+<!--===============================================================================================-->
 </head>
 <body>
+	
+	<div class="contact1">
+	
+	<table class="table table-dark">
+		<thead>
+			<th>Codigo: </th>
+			<th>Nombre: </th>
+			<th>Apellido: </th>
+			<th>Carnet: </th>
+			<th>Carrera: </th>
+		</thead>
+		<th:block th:each="estudiante,row:${estudiantes}">
+			<tr>
+				<th th:text="${estudiante.cUsuario}">
+				<th th:text="${estudiante.nombre}">
+				<th th:text="${estudiante.apellido}">
+				<th th:text="${estudiante.carnet}">
+				<th th:text="${estudiante.carrera}">
+			</tr>
+		</th:block>
+	</table>
+	
+		<div class="container-contact1">
+			<div class="contact1-pic js-tilt" data-tilt>
+				<img src="images/img-01.png" alt="IMG">
+			</div>
 
-<table>
-	<thead>
-		<th>Nombre: </th>
-		<th>Apellido: </th>
-		<th>Carnet: </th>
-		<th>Carrera: </th>
-	</thead>
-	<th:block th:each="estudiante,row:${estudiantes}">
-		<tr>
-			<th th:text="${estudiante.nombre}">
-			<th th:text="${estudiante.apellido}">
-			<th th:text="${estudiante.carnet}">
-			<th th:text="${estudiante.carrera}">
-		</tr>
-	</th:block>
-</table>
+			<form th:action="@{/delete}" class="contact1-form validate-form">
+				<span class="contact1-form-title">
+					Borrar Estudiantes por Codigo
+				</span>
+
+				<div class="wrap-input1 validate-input" data-validate = "Name is required">
+					<input class="input1"  type="number" name="codigo" placeholder="Codigo">
+					<span class="shadow-input1"></span>
+				</div>
+
+				<div class="wrap-input1 validate-input" data-validate = "Name is required">
+					<input class="input1" type="submit" value="Borrar">
+					<span class="shadow-input1"></span>
+				</div>
+				
+				<div class="container-contact1-form-btn">
+					<button class="contact1-form-btn" th:onclick="|window.location.href='/inicio'|">
+						<span>
+							Inicio
+							<i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+						</span>
+					</button>
+				</div>
+			</form>
+		</div>
+	</div>
+
+
+
+
+<!--===============================================================================================-->
+	<script src="vendor/jquery/jquery-3.2.1.min.js"></script>
+<!--===============================================================================================-->
+	<script src="vendor/bootstrap/js/popper.js"></script>
+	<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+<!--===============================================================================================-->
+	<script src="vendor/select2/select2.min.js"></script>
+<!--===============================================================================================-->
+	<script src="vendor/tilt/tilt.jquery.min.js"></script>
+	<script >
+		$('.js-tilt').tilt({
+			scale: 1.1
+		})
+	</script>
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-23581568-13"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-23581568-13');
+</script>
+
+<!--===============================================================================================-->
+	<script src="js/main.js"></script>
 
 </body>
 </html>
