--- a/capas/src/main/resources/templates/index.html
+++ b/capas/src/main/resources/templates/index.html
@@ -1,36 +1,103 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta charset="ISO-8859-1">
-<title>Ingreso estudiantes</title>
+	<title>Ingresar Estudiantes</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+<!--===============================================================================================-->
+	<link rel="icon" type="image/png" href="images/icons/favicon.ico"/>
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.7.0/css/font-awesome.min.css">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="vendor/animate/animate.css">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="vendor/css-hamburgers/hamburgers.min.css">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="vendor/select2/select2.min.css">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="css/util.css">
+	<link rel="stylesheet" type="text/css" href="css/main.css">
+<!--===============================================================================================-->
 </head>
 <body>
 	
-	<form th:action="@{/save}" method="post" th:object="${estudiante}">
-		
-		<label>Nombre:</label>
-		<input type="text" th:field="*{nombre}" ><br>
-		<span th:errors="*{Nombre}" style="color:#FF0000"></span><br>
-	
-		<label>Apellido:</label>
-		<input type="text" th:field="*{apellido}" ><br>
-		<span th:errors="*{Apellido}" style="color:#FF0000"></span><br>
-		
-		<label>Carnet:</label>
-		<input type="text" th:field="*{carnet}" ><br>
-		<span th:errors="*{Carnet}" style="color:#FF0000"></span><br>
-		
-		<label>Carrera:</label>
-		<input type="text" th:field="*{carrera}" ><br>
-		<span th:errors="*{Carrera}" style="color:#FF0000"></span><br>
-		
-		<input type="submit" value="Guardar">
-		
-	</form>
-	
+	<div class="contact1">
+		<div class="container-contact1">
+			<form th:action="@{/save}" method="post" th:object="${estudiante}" class="contact1-form validate-form">
+				<span class="contact1-form-title">
+					Ingresar Estudiante
+				</span>
 
-	
-	<button type="button" th:onclick="|window.location.href='/listado'|">Ver Listado</button>
-	
+				<div class="wrap-input1 validate-input" >
+					<input class="input1"  type="text" th:field="*{nombre}" placeholder="Nombre">
+					<span th:errors="*{Nombre}" style="color:#FF0000"></span>
+				</div>
+
+				<div class="wrap-input1 validate-input" >
+					<input class="input1"  type="text" th:field="*{apellido}" placeholder="Apellido">
+					<span th:errors="*{Apellido}" style="color:#FF0000"></span>
+				</div>
+
+				<div class="wrap-input1 validate-input" >
+					<input class="input1"  type="text" th:field="*{carnet}" placeholder="Carnet">
+					<span th:errors="*{Carnet}" style="color:#FF0000"></span>
+				</div>
+				
+				<div class="wrap-input1 validate-input" >
+					<input class="input1"  type="text" th:field="*{carrera}" placeholder="Carrera">
+					<span th:errors="*{Carrera}" style="color:#FF0000"></span>
+				</div>
+				
+				<div class="wrap-input1 validate-input" >
+					<input class="input1 input2" type="submit" value="Guardar">
+					<span class="shadow-input1"></span>
+				</div>
+				
+			</form>
+			<div class="container-contact1-form-btn">
+				<button class="contact1-form-btn" th:onclick="|window.location.href='/listado'|">
+					<span>
+						Ver Listado
+						<i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+					</span>
+				</button>
+			</div>
+
+		</div>
+	</div>
+
+
+
+
+<!--===============================================================================================-->
+	<script src="vendor/jquery/jquery-3.2.1.min.js"></script>
+<!--===============================================================================================-->
+	<script src="vendor/bootstrap/js/popper.js"></script>
+	<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+<!--===============================================================================================-->
+	<script src="vendor/select2/select2.min.js"></script>
+<!--===============================================================================================-->
+	<script src="vendor/tilt/tilt.jquery.min.js"></script>
+	<script >
+		$('.js-tilt').tilt({
+			scale: 1.1
+		})
+	</script>
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-23581568-13"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-23581568-13');
+</script>
+
+<!--===============================================================================================-->
+	<script src="js/main.js"></script>
+
 </body>
 </html>
