--- a/capas/src/main/resources/templates/listado.html
+++ b/capas/src/main/resources/templates/listado.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-	<title>Contact V1</title>
+	<title>Listado</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <!--===============================================================================================-->
@@ -45,8 +45,13 @@
 	</table>
 	
 		<div class="container-contact1">
-			<div class="contact1-pic js-tilt" data-tilt>
-				<img src="images/img-01.png" alt="IMG">
+			<div class="container-contact1-form-btn">
+				<button class="contact1-form-btn" th:onclick="|window.location.href='/inicio'|">
+					<span>
+						Inicio
+						<i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+					</span>
+				</button>
 			</div>
 
 			<form th:action="@{/delete}" class="contact1-form validate-form">
@@ -54,25 +59,19 @@
 					Borrar Estudiantes por Codigo
 				</span>
 
-				<div class="wrap-input1 validate-input" data-validate = "Name is required">
-					<input class="input1"  type="number" name="codigo" placeholder="Codigo">
+				<div class="wrap-input1 validate-input" >
+					<input class="input1"  type="number" name="codigo" placeholder="Codigo" required="required">
 					<span class="shadow-input1"></span>
 				</div>
 
-				<div class="wrap-input1 validate-input" data-validate = "Name is required">
-					<input class="input1" type="submit" value="Borrar">
+				<div class="wrap-input1 validate-input" >
+					<input class="input1 input2" type="submit" value="Borrar">
 					<span class="shadow-input1"></span>
 				</div>
 				
-				<div class="container-contact1-form-btn">
-					<button class="contact1-form-btn" th:onclick="|window.location.href='/inicio'|">
-						<span>
-							Inicio
-							<i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-						</span>
-					</button>
-				</div>
 			</form>
+			
+
 		</div>
 	</div>
 
